# Palmistry_app

./: .gitignore  README.md  package.json  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/: .env.example  app.py  serve.py
backend/services/: ai_service.py  session_service.py  voice_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatScreen.jsx  LandingScreen.jsx  ResultsScreen.jsx  ScannerScreen.jsx
frontend/src/lib/: api.js  speech.js
scripts/: vercel-build.mjs
